# inflearn-llm-application-course

./: 1.langchain_llm_test.ipynb  3.1.2 환경 설정과 LangChain의 ChatUpstage를 활용한 검증.ipynb  3.2 LangChain과 Chroma를 활용한 RAG 구성.ipynb  README.md  main.py  pyproject.toml  tax.docx
