[project]
name = "inflearn-llm-application-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "doc2txt>=1.0.8",
    "docx2txt>=0.9",
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.29",
    "langchain-text-splitters>=0.3.9",
    "langchain-upstage>=0.7.1",
    "langchainhub>=0.1.21",
    "python-dotenv>=1.1.1",
]
